clean-ups and refactorings